<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_play"
        android:title="@string/action_play"
        android:icon="@android:drawable/ic_media_play"
        android:showAsAction="always" />


    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always|collapseActionView"
        android:actionViewClass="android.widget.SearchView"
        />

    <!-- More -->
    <item
        android:id="@+id/a_More"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="More">
        <menu>


            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:showAsAction="never" />

            <item
                android:id="@+id/action_share"
                android:title="@string/action_share"
                android:icon="@android:drawable/ic_menu_share"
                android:showAsAction="never" />


            <item
                android:id="@+id/action_help"
                android:title="@string/action_help"
                android:icon="@android:drawable/ic_menu_help"
                android:showAsAction="never" />

        </menu>
    </item>


</menu>
